--- a/Page_Principal.html
+++ b/Page_Principal.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<div class="container">
 <h1> <span class="titre_souligne" id="afficher_def_stegano" onmouseover="function_afficher_def_stegano ()"  > Stéganographie </span>  et <span class="titre_souligne" id="afficher_def_cryptage" onmouseover="function_afficher_def_cryptage ()" > cryptage </span></h1>
 
  <h2>
@@ -50,7 +50,7 @@ Ici vous trouverez un ensemble d'algorithmes permettant de crypter ou de coder u
    <br>
         <br>
    <br>
-    	<a class="lien-bouton" href="#" target="_parent" >
+    	<a class="lien-bouton" href="Cacher image dans image.html" target="_parent" >
            Cacher une image dans une image
         </a>
    <br>
@@ -60,7 +60,7 @@ Ici vous trouverez un ensemble d'algorithmes permettant de crypter ou de coder u
 	
 	     
    
-    	<a class="lien-bouton" href="#" target="_parent">
+    	<a class="lien-bouton" href="Retrouvez image .html" target="_parent">
             Retrouver une image dans une autre image
         </a>
    <br>
@@ -81,7 +81,7 @@ Ici vous trouverez un ensemble d'algorithmes permettant de crypter ou de coder u
           <center> <input type="button" value="Suivant" id="Suivant" onclick="suivante_bouton()" > </input> </center>
      </fieldset >
  </footer >
-
+</div>
 <script type="text/javascript">
 anecdote_1 = "Alan Turing était homosexuel et fût condamné a cause de cela a une castration chimique , il se suicida alors en 1954 en croquant une pomme recourverte de cyanure. "
 anecdote_2 = " 'Les tentatives de création de machines pensantes nous seront d'une grande aide pour découvrir comment nous pensons nous-mêmes. ' Alan Turing "
