--- a/Explication_Steganographie_retrouve_message.html
+++ b/Explication_Steganographie_retrouve_message.html
@@ -27,7 +27,7 @@
         <TR> 
          <TH> Pixel n°  </TH> 
          <TH> composante rouge initiale en décimale </TH> 
-         <TH> bites de poid faible </TH> 
+         <TH> bits de poid faible </TH> 
          <TH> bit retrouvé </TH> 
          <TH> lettre retrouvé </TH> 
        </TR> 
