--- a/Page_Principal.html
+++ b/Page_Principal.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="container">
-<h1> <span class="titre_souligne" id="afficher_def_stegano" onmouseover="function_afficher_def_stegano ()"  > Stéganographie </span>  et <span class="titre_souligne" id="afficher_def_cryptage" onmouseover="function_afficher_def_cryptage ()" > cryptage </span></h1>
+<h1> <span class="titre_souligne" id="afficher_def_stegano" onmouseover="function_afficher_def_stegano ()"  > Stéganographie</span>  et <span class="titre_souligne" id="afficher_def_cryptage" onmouseover="function_afficher_def_cryptage ()" > cryptage </span></h1>
 
  <h2>
 Ici vous trouverez un ensemble d'algorithmes permettant de crypter ou de coder un message ou une image et d'en apprendre plus sur les différentes étapes utilisées.
@@ -34,7 +34,7 @@ Ici vous trouverez un ensemble d'algorithmes permettant de crypter ou de coder u
   
   <div id="Programme" >
   
- <div id="titre"> <b> Programme : </b></div>
+ <div id="titre"> <b> Programmes : </b></div>
   
   <br>
   <br>
@@ -83,12 +83,12 @@ Ici vous trouverez un ensemble d'algorithmes permettant de crypter ou de coder u
  </footer >
 </div>
 <script type="text/javascript">
-anecdote_1 = "Alan Turing était homosexuel et fût condamné a cause de cela a une castration chimique , il se suicida alors en 1954 en croquant une pomme recourverte de cyanure. "
+anecdote_1 = "Alan Turing était homosexuel et fût condamné à cause de cela à une castration chimique , il se suicida alors en 1954 en croquant une pomme recourverte de cyanure. "
 anecdote_2 = " 'Les tentatives de création de machines pensantes nous seront d'une grande aide pour découvrir comment nous pensons nous-mêmes. ' Alan Turing "
 anecdote_3 = "Le cryptage va prendre des données et les passer dans une sorte de moulinette qui va les rendre imcompréhensibles."
-anecdote_4 = "Cette page contient 185 lignes de code"
+anecdote_4 = "Cette page contient 170 lignes de code"
 anecdote_5="Arthur Scherbius, l'inventeur de la machine utilisée par les nazis pour chiffrer leurs communications, partage un point commun avec Alan Turing, qui a cassé ce code : il est mort avant que son invention connaisse le succés."
-anecdote_6="En 2001, les codeurs Karl Hasselström et Jon åslund ont crée un drôle de langage : le SPL (Shakespeare Programming Language).Il permet d'écrire le code source des programmes sous la forme d'une pièce de théâtre."
+anecdote_6="En 2001, les codeurs Karl Hasselström et Jon åslund ont crées un drôle de langage : le SPL (Shakespeare Programming Language).Il permet d'écrire le code source des programmes sous la forme d'une pièce de théâtre."
 anecdote_7="Un scribe égyptien a employé des hiéroglyphes non conformes à la langue correcte dans une inscription.Kahn le qualifie de premier exemple documenté de cryptographie écrite."
 anecdote_8="Les grecs emploient un dispositif appelé la 'scytale' - un bâton autour duquel une bande de cuir était enveloppé et sur laquelle on écrivait le message. Le destinataire avait un bâton identique permettant d'enrouler le cuir afin de déchiffrer le message."
 
@@ -139,7 +139,7 @@ suivante ()
 }
 
 
-timer_preparation=setTimeout(suivante,7500)
+timer_preparation=setTimeout(suivante,15000)
 }
 function suivante_bouton (){
 clearInterval(timer_preparation)
