--- a/Retrouve_les_message.html
+++ b/Retrouve_les_message.html
@@ -3,7 +3,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8"   >
   <link rel="stylesheet" type="text/css" href="Ficher_Principal.css" />
-  <title>Vérification</title>
+  <title>Retrouver un message dans une image</title>
 </head>
 
 
@@ -113,7 +113,7 @@
   <h1>
       <br>
 	<br>
-    Ceci est un programme permettant de retrouvé un message dans une autre image
+    Ceci est un programme permettant de retrouver un message dans une autre image
     <br>
 	<br>
     Si vous voulez des explications sur le fonctionnement du programme cliqué  <a href="Explication_Steganographie_retrouve_message.html"  target="_blank"> ici </a>
@@ -226,7 +226,7 @@ document.getElementById("Fin").style.display="flex"
 document.getElementById("titre").style.display="block"
 document.getElementById("titre").innerHTML="Etape 2"
 document.getElementById("monCanvas").style.display="none";
-document.getElementById("Etape").innerHTML="Ici , vous devez choisir les options pour que le programme sache ou chercher le message et le résultat s'affiche ci dessous"
+document.getElementById("Etape").innerHTML="Le tableau ci-dessous correspond a tous les mots cachés dans l'image. Bon courage"
 document.getElementById("Upload").style.display="none"
 }  
   
