--- a/Retrouve_les_message.html
+++ b/Retrouve_les_message.html
@@ -116,7 +116,7 @@
     Ceci est un programme permettant de retrouver un message dans une autre image
     <br>
 	<br>
-    Si vous voulez des explications sur le fonctionnement du programme cliqué  <a href="Explication_Steganographie_retrouve_message.html"  target="_blank"> ici </a>
+    Si vous voulez des explications sur le fonctionnement du programme cliquez  <a href="Explication_Steganographie_retrouve_message.html"  target="_blank"> ici </a>
 
 
     <input value="C'est parti !" onclick="Etape_1()" maxlength="11" type="button" id="parti" >
