--- a/Retrouvez image .html
+++ b/Retrouvez image .html
@@ -39,7 +39,7 @@
     <option value="2" >Mode 2</option> 
     </select>
    <br>
-   Si vous voulez des explications cliquer <a href="Explication_Image.html"  target="_blank"> ici </a>
+   Si vous voulez des explications cliquez <a href="Explication_Image.html"  target="_blank"> ici </a>
    <br>
    <br>
    <font onclick="Quelle_mode_choisir ()"  style="text-decoration:underline; color:blue;" > Quelle mode choisir ? </font>
