--- a/Stéganographie_code.html
+++ b/Stéganographie_code.html
@@ -77,7 +77,7 @@
     Ceci est un programme permettant de cacher un message dans une autre image  ( en 7 bits )
     <br>
     <br>
-    Si vous voulez des explications sur le fonctionnement du programme cliqué  <a href="Explication_Steganographie_texte.html"  target="_blank"> ici </a>
+    Si vous voulez des explications sur le fonctionnement du programme cliquez  <a href="Explication_Steganographie_texte.html"  target="_blank"> ici </a>
     <br>
 
 
@@ -156,7 +156,7 @@ function Etape_1 (){
   document.getElementById("titre").style.display="block";
   document.getElementById("titre").innerHTML="Etape 1"
   document.getElementById("Etape").style.display="block";
-  document.getElementById("Etape").innerHTML="Ici , vous devez simplement choisir l'image dans laquel vous voulez que le texte soit introduit  "
+  document.getElementById("Etape").innerHTML="Ici , vous devez simplement choisir l'image dans laquelle vous voulez que le texte soit introduit  "
   document.getElementById("Upload").style.display="block"
 }
 
@@ -276,7 +276,7 @@ function passer_1() {
 function passer_2(){
   if (texte == "" ){
     document.getElementById("probleme").style.color="red"
-    document.getElementById("probleme").innerHTML = "La zone de texte n'est pas rempli "
+    document.getElementById("probleme").innerHTML = "La zone de texte n'est pas remplie "
   }
   else if (texte != "" ) {
     Etape_3 ()
