--- a/Explication_Steganographie_texte.html
+++ b/Explication_Steganographie_texte.html
@@ -24,7 +24,7 @@
 
       Pour commencer une image est codée en Pixel , et les Pixel sont eux-mêmes codés en 4 valeurs , Rouge , Vert , Bleu , Opacité valant une valeur entre 0 et 255 . Par exemple si un Pixel a pour valeur Rouge = 255 Vert = 0 Bleu = 0 et Opacité = 255 la couleur retournée sera rouge.
       <br>
-      Une lettre en informatique est codée par son code <a href="http://table-ascii.com/"  target="_blank"> ASCII </a> par exemple la lettre A vaut 66 en décimal. Pour cacher ce texte nous allons convertir cette lettre en binaire la lettre A qui vaut en binaire  1000010 ( en 7 bits )
+      Une lettre en informatique est codée par son code <a href="http://table-ascii.com/"  target="_blank"> ASCII </a> par exemple la lettre A vaut 66 en décimal. Pour cacher ce texte nous allons convertir cette lettre en binaire la lettre A vaut en binaire  1000010 ( en 7 bits )
       <br>
       Maintenant que nous savons cela nous allons utiliser le procédé des bits de poids faible. Nous allons cacher un bit de notre lettre dans le bit le plus faible d'une valeur du Pixel. Exemple si nous voulons cacher la lettre " A " il nous fraudra alors par exemple 7 valeurs de la composante rouge cela fait donc :
       <br> 
