--- a/Retrouvez image .html
+++ b/Retrouvez image .html
@@ -42,7 +42,7 @@
    Si vous voulez des explications cliquez <a href="Explication_Image.html"  target="_blank"> ici </a>
    <br>
    <br>
-   <font onclick="Quelle_mode_choisir ()"  style="text-decoration:underline; color:blue;" > Quelle mode choisir ? </font>
+   <font onclick="Quelle_mode_choisir ()"  style="text-decoration:underline; color:blue;" > Quel mode choisir ? </font>
     <input value="C'est parti !" onclick="Etape_1()" maxlength="11" type="button" id="parti" >
 
   </h1>
