--- a/Cryptage.html
+++ b/Cryptage.html
@@ -55,7 +55,7 @@ Résultat : <font id="resultat_decryptage" > </font>
   <h1>
       <br>
 	<br>
-    Ceci est un programme permettant de crypter un message unique et de decrypter un message utiliser selon la technique du programme
+    Ceci est un programme permettant de crypter un message unique et de decrypter un message utilisé selon la technique du programme
 
 
     <input value="C'est parti !" onclick="Etape_1()" maxlength="11" type="button" id="parti" >
