--- a/Cacher image dans image.html
+++ b/Cacher image dans image.html
@@ -81,7 +81,7 @@ document.getElementById("monCanvas1").style.display="block";
 document.getElementById("titre").style.display="block";
 document.getElementById("titre").innerHTML="Etape 1"
 document.getElementById("Etape").style.display="block";
-document.getElementById("Etape").innerHTML="Ici , vous devez choisir les images , celle de droite correspond a l'image qui va être cacher dans l'image de gauche"
+document.getElementById("Etape").innerHTML="Ici , vous devez choisir les images , celle de droite correspond à l'image qui va être cacher dans l'image de gauche"
 document.getElementById("Upload_c").style.display="block"
 document.getElementById("Upload1").style.display="block"
 document.getElementById("image_upload").style.display="block"
