--- a/Cryptage.html
+++ b/Cryptage.html
@@ -17,7 +17,7 @@
  <div id="cryptage" style="display:none;">                
 <center><strong><big>Crypter</big></strong></center>
 <br>
-Taper votre message a crypter ici :
+Tapez votre message à crypter ici :
 <textarea rows="4" cols="50" id= "texte_crypter"class="textarea_cryptage" maxlength="100"></textarea>
 <br>
 <br>
@@ -26,7 +26,7 @@ La clé ( qui vous permettra de retrouver le message ) : <font id="cle"> </font>
 Résultat : <font id="resultat_cryptage"></font>
  <br>
  <br>
-<strong> Note : le programme accepte que des lettres et transforme les caractéres spéciaux</strong>
+<strong> Note : le programme accepte que des lettres et transforme les caractères spéciaux</strong>
  <br>
 
 <input value="Crypter" onclick="crypter ()" maxlength="11" type="button" id="boutton_crypter"  > 
@@ -35,11 +35,11 @@ Résultat : <font id="resultat_cryptage"></font>
   <div id="decryptage" style="display:none;">                
 <center><strong><big>Decrypter</big></strong></center>
 <br>
-Taper le message a decrypter ici :
+Tapez le message à decrypter ici :
 <textarea rows="4"cols="50"id="texte_decrypter"class="textarea_cryptage"></textarea>
 <br>
 <br>
-Rentrer la clé qui vous a été donné durant le cryptage :<input type="text" id="cle_decrypter"></font>
+Rentrez la clé qui vous a été donnée durant le cryptage :<input type="text" id="cle_decrypter"></font>
 <br>
 <br>
 Résultat : <font id="resultat_decryptage" > </font>
@@ -55,7 +55,7 @@ Résultat : <font id="resultat_decryptage" > </font>
   <h1>
       <br>
 	<br>
-    Ceci est un programme permettant de crypter un message unique et de decrypter un message utilisé selon la technique du programme
+    Ceci est un programme permettant de crypter un message unique et de décrypter un message utilisé selon la technique du programme
 
 
     <input value="C'est parti !" onclick="Etape_1()" maxlength="11" type="button" id="parti" >
