--- a/Explication cacher une image.html
+++ b/Explication cacher une image.html
@@ -14,8 +14,8 @@
     <a id="page_principal" href="Page_Principal.html" target="_parent" >  <img src="Home-512.png" > </img> </a>
 
     
-    <center><strong><big>Explication: </big></strong></center>
-	Pour cacher une image dans une autre image il suffit de mettres le bits de poids fort de l'image à cacher dans l'image de base.
+    <center><strong><big>Explications : </big></strong></center>
+	Pour cacher une image dans une autre image il suffit de mettre le bits de poids fort de l'image à cacher dans l'image de base.
 		 <br>
 		 <br>
 		 <TABLE BORDER="1"> 
