--- a/Explication_Steganographie_retrouve_message.html
+++ b/Explication_Steganographie_retrouve_message.html
@@ -14,7 +14,7 @@
     <a id="page_principal" href="Page_Principal.html" target="_parent" >  <img src="Home-512.png" > </img> </a>
 
     
-    <center><strong><big>Explication: </big></strong></center>
+    <center><strong><big>Explications:  </big></strong></center>
     <br>
     <div class="corp_page_explication">
      On utilise le même procédé que pour caché un message mais a l'envers que vous pouvez trouver <a href="Explication_Steganographie_texte.html"  target="_blank"> ici </a>
@@ -26,10 +26,10 @@
 	 <TABLE BORDER="1"> 
         <TR> 
          <TH> Pixel n°  </TH> 
-         <TH> composante rouge initiale en décimale </TH> 
+         <TH> composante rouge initiale en décimal </TH> 
          <TH> bits de poid faible </TH> 
          <TH> bit retrouvé </TH> 
-         <TH> lettre retrouvé </TH> 
+         <TH> lettre retrouvée </TH> 
        </TR> 
        
        <TR> 
