--- a/Page_Principal.html
+++ b/Page_Principal.html
@@ -10,6 +10,7 @@
 
 <body>
 <div class="container">
+<img id="license" src="by.png" width="10%" height="7%"></img>
 <h1> <span class="titre_souligne" id="afficher_def_stegano" onmouseover="function_afficher_def_stegano ()"  > Stéganographie</span>  et <span class="titre_souligne" id="afficher_def_cryptage" onmouseover="function_afficher_def_cryptage ()" > cryptage </span></h1>
 
  <h2>
