--- a/Retrouvez image .html
+++ b/Retrouvez image .html
@@ -39,7 +39,7 @@
     <option value="2" >Mode 2</option> 
     </select>
    <br>
-   Si vous voulez des explications cliquez <a href="Explication_Image.html"  target="_blank"> ici </a>
+   Si vous voulez des explications cliquez <a href="Explication retrouver image.html"  target="_blank"> ici </a>
    <br>
    <br>
    <font onclick="Quelle_mode_choisir ()"  style="text-decoration:underline; color:blue;" > Quel mode choisir ? </font>
@@ -58,7 +58,7 @@ const allowedTypes = ["image/png", "image/jpg", "image/jpeg", "image/gif"];
 
 
 function Quelle_mode_choisir () {
-alert("Le mode dépend de la facon dont vous avez caché l'image , le mode 1 correspond a celui le plus basique ")
+alert("Le mode dépend de la façon dont vous avez caché l'image , le mode 1 correspond à celui le plus basique ")
 }
  
 function Etape_1 (){
