--- a/Explication_Steganographie_retrouve_message.html
+++ b/Explication_Steganographie_retrouve_message.html
@@ -17,7 +17,7 @@
     <center><strong><big>Explications:  </big></strong></center>
     <br>
     <div class="corp_page_explication">
-     On utilise le même procédé que pour caché un message mais a l'envers que vous pouvez trouver <a href="Explication_Steganographie_texte.html"  target="_blank"> ici </a>
+     On utilise le même procédé que pour cacher un message mais à l'envers que vous pouvez trouver <a href="Explication_Steganographie_texte.html"  target="_blank"> ici </a>
 	 <br>
 	 <br>
 	 Voilà un bref tableau pour vous montrer le fonctionnement.
